# simple-python-projects

./: .replit  README.md  art.py  main.py  pyproject.toml
US_states_map_finder/: 50_states.csv  main.py
auto-email-sender/: list_file.csv  main.py
auto-email-sender/letter_templates/: letter_example.py
leap-year-python/: main.py
number-guessing-game/: art.py  main.py
password-manager/: main.py
ping-pong-game/: ball.py  main.py  paddle.py  scoreboard.py
prime-number-python/: main.py
quiz-game/: main.py  quiz_brain.py
quizzler-v2/: data.py  main.py  quiz_brain.py  ui.py
simple-auction-logic/: main.py
snake_game/: food.py  main.py  scoreboard.py  snake.py
spelling-game-hangman/: main.py
spirograph_draw/: main.py
sunset-reminder/: main.py
turtle-racing-game/: cars.py  main.py  player.py  scoreboard.py
turtles_race/: main.py
units_calculator /: main.py
